--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="style.css" class="">
 </head>
 <body>
+    <div class="container">
+        
+    </div>
     
     <script src="script.js"></script>
 </body>
