added downloaded image from tutorial. scaled it down to 75%

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="container">
-        
+        <img src="assets/423-image.png" alt="A beautiful alipine lake with a rowboat in the foreground" >
     </div>
     
     <script src="script.js"></script>
