added HTML content, some is just placeholding until the JS comes in. Needs styling

--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
 <body>
     <div class="container">
         <img src="assets/423-image.png" alt="A beautiful alipine lake with a rowboat in the foreground" >
+        <h1 id="current-time">12:00:21</h1>
+        <div class="quotes">
+            <p>Today's Quote:</p>
+            <h2>Lost time is never found again.</h2>
+        </div>
+
     </div>
     
     <script src="script.js"></script>
