--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <img src="assets/423-image.png" alt="A beautiful alipine lake with a rowboat in the foreground" >
-        <h1 id="current-time">12:00:21</h1>
+        <h1 id="current-time"></h1>
         <div class="quotes">
             <p>Today's Quote:</p>
             <h2>Lost time is never found again.</h2>
